<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/notifications_view_margin">

            <TextView
                android:id="@+id/txt_timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_Alarm"
                android:textSize="@dimen/notification_alarm_textsize" />

            <TextView
                android:id="@+id/txt_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/notifications_placeholder"
                android:text="@string/notifications_time"
                android:textSize="@dimen/notification_headline_textsize" />

            <Button
                android:id="@+id/btn_timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications_text_timePicker_Button" />

            <TextView
                android:id="@+id/txt_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/notifications_placeholder"
                android:text="@string/notifications_day"
                android:textSize="@dimen/notification_headline_textsize" />

            <CheckBox
                android:id="@+id/chk_Monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications_Monday"
                android:textSize="@dimen/notification_days_textsize" />

            <CheckBox
                android:id="@+id/chk_Tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications_Tuesday"
                android:textSize="@dimen/notification_days_textsize" />

            <CheckBox
                android:id="@+id/chk_Wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications_Wednesday"
                android:textSize="@dimen/notification_days_textsize" />

            <CheckBox
                android:id="@+id/chk_Thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications_Thursday"
                android:textSize="@dimen/notification_days_textsize" />

            <CheckBox
                android:id="@+id/chk_Friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications_Friday"
                android:textSize="@dimen/notification_days_textsize" />

            <CheckBox
                android:id="@+id/chk_Saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications_Saturday"
                android:textSize="@dimen/notification_days_textsize" />

            <CheckBox
                android:id="@+id/chk_Sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications_Sunday"
                android:textSize="@dimen/notification_days_textsize" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>