<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_button_notification"
        android:icon="@drawable/ic_baseline_notifications_off_24"
        app:showAsAction="always"
        android:title="@string/action_button_notifications" />
</menu>