...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/trackfood_row_margin"
                    android:text="@string/trackfood_hint"
                    android:textSize="@dimen/catlist_card_body_textsize"/>

                <TableLayout
                    android:id="@+id/scroll_track_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/catlist_card_margin" />

                <Button
                    android:id="@+id/trackfood_btn_save"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/settings_button_margin"
                    android:text="@string/save"
                    android:textSize="@dimen/settings_button_textsize"
...
